budgie-extras (0.4.1-1) unstable; urgency=medium

  * New upstream release
  * Packaging Changes:
    - debian/control and debian/compat: update to v11
    - debian/control: Bump Standards-Version - no changes required
    - debian/control: new binary packages budgie-rotation-lock-applet,
      budgie-clockworks-applet,
      budgie-dropby-applet
    - debian/copyright: 2018 year updates

 -- David Mohammed <fossfreedom@ubuntu.com>  Mon, 15 Jan 2018 15:35:17 +0000

budgie-extras (0.3.0-1) unstable; urgency=medium

  * Initial Release (Closes: #883720)

 -- David Mohammed <fossfreedom@ubuntu.com>  Wed, 06 Dec 2017 20:20:57 +0000