@@ -1,26 +1,15 @@
 #!/usr/bin/make -f
 export DH_VERBOSE = 1
-export MAKE = ninja -v
 
 %:
-	dh $@ --parallel --with python3
+	dh $@ --with python3
 
 override_dh_auto_configure:
-	mkdir -p build
-	cd build && meson --prefix=/usr --libdir=/usr/lib --datadir=/usr/share ..
+	dh_auto_configure -- --prefix=/usr --libdir=/usr/lib --datadir=/usr/share
 
-override_dh_auto_build:
-	cd build && $(MAKE)
-
-override_dh_auto_clean:
-	rm -rf build
-	
 override_dh_auto_test:
 	dh_auto_test
 	./tools/run-pep8
-
-override_dh_auto_install:
-	cd build && DESTDIR=$(CURDIR)/debian/tmp $(MAKE) install
 
 override_dh_python3:
 	dh_python3 /usr/lib/budgie-desktop/plugins
