@@ -1,1 +1,1 @@
-debian/upstream-signing-key.pgp
+debian/upstream/signing-key.pgp
